--- a/index.html
+++ b/index.html
@@ -11,3 +11,8 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<style>
+  body {
+    background-color: #fff;
+  }
+</style>
